--- a/examples/builder-config.yaml
+++ b/examples/builder-config.yaml
@@ -3,18 +3,21 @@ dist:
   description: "OpenTelemetry Collector with PostgreSQL EXPLAIN plan connector"
   output_path: ./dist
   version: 0.1.0
-  otelcol_version: 0.114.0
+  otelcol_version: 0.142.0
+
+replaces:
+  - github.com/middle-management/otlppgplan/connector/pgplanconnector => ../connector/pgplanconnector
+  - github.com/middle-management/otlppgplan => ..
 
 receivers:
-  - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.114.0
+  - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.142.0
 
 processors:
-  - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.114.0
+  - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.142.0
 
 exporters:
-  - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.114.0
-  - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.114.0
+  - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.142.0
+  - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.142.0
 
 connectors:
   - gomod: github.com/middle-management/otlppgplan/connector/pgplanconnector v0.1.0
-    path: ../connector/pgplanconnector
